// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"workerType" option should use "Worker": errors 1`] = `Array []`;

exports[`"workerType" option should use "Worker": module 1`] = `
"module.exports = function() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
};"
`;

exports[`"workerType" option should use "Worker": result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should use "Worker": warnings 1`] = `Array []`;

exports[`"workerType" option should work the "ServiceWorker" value: errors 1`] = `Array []`;

exports[`"workerType" option should work the "ServiceWorker" value: module 1`] = `
"module.exports = function() {
  return new ServiceWorker(__webpack_public_path__ + \\"test.worker.js\\");
};"
`;

exports[`"workerType" option should work the "ServiceWorker" value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should work the "ServiceWorker" value: warnings 1`] = `Array []`;

exports[`"workerType" option should work the "SharedWorker" value: errors 1`] = `Array []`;

exports[`"workerType" option should work the "SharedWorker" value: module 1`] = `
"module.exports = function() {
  return new SharedWorker(__webpack_public_path__ + \\"test.worker.js\\");
};"
`;

exports[`"workerType" option should work the "SharedWorker" value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should work the "SharedWorker" value: warnings 1`] = `Array []`;
